# cwick

./: .gitignore  README.md  justfile  pyproject.toml  setup.py
cpy_fenwick/: fenwick.pyx
py/: fenwick.py
py_fenwick/: fenwick.py
tests/: test_basic_ops.py
