[tool.poetry]
name = "cwick"
version = "0.1.0"
description = "cythonized fenwick tree"
authors = ["Matthew Prashker <mprashker12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.10"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
